# 1801ICT-project4

./: gendata.cpp  gengraph.cpp  graph-data  meson.build  student-data  student_data  task-1.cpp  task-2.cpp
