project('project-4', ['cpp', 'c'],
          version: '0.1.0',
    meson_version: '>= 0.50.0',
  default_options: [ 'warning_level=3',
                     'cpp_std=c++17',
                   ],
)

executable('gendata', 'gendata.cpp', install: true)
executable('gengraph', 'gengraph.cpp', install: true)
executable('task-1', 'task-1.cpp', install: true)
executable('task-2', 'task-2.cpp', install: true)
